[build-system]
requires = ["setuptools>=61.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "CheckMyTex"
version = "1.0.0"
description = "A simple tool for checking complex LaTeX documents, e.g., dissertations."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Dominik Krupke", email = "krupke@ibr.cs.tu-bs.de"},
]
keywords = ["LaTeX", "spell-check", "grammar-check", "document-quality"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "pyspellchecker>=0.7.2",
    "flachtex>=0.3.13",
    "yalafi>=1.3.0",
    "proselint>=0.13.0",
    "rich>=12.5.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
    "pre-commit>=3.0",
    "tox>=4.0",
]
test = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.urls]
Homepage = "https://github.com/d-krupke/checkmytex"
Repository = "https://github.com/d-krupke/checkmytex"
Issues = "https://github.com/d-krupke/checkmytex/issues"

[project.scripts]
checkmytex = "checkmytex.__main__:main"

[tool.setuptools.packages.find]
include = ["checkmytex*"]
exclude = ["tests*"]

[tool.setuptools.package-data]
checkmytex = ["py.typed"]


[tool.pytest.ini_options]
minversion = "6.0"
addopts = ["-ra", "--showlocals", "--strict-markers", "--strict-config"]
xfail_strict = true
filterwarnings = ["error"]
log_cli_level = "info"
testpaths = ["tests"]

[tool.coverage.run]
source = ["checkmytex"]
branch = true
omit = ["*/tests/*", "*/__pycache__/*"]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]

[tool.ruff]
target-version = "py310"
src = ["checkmytex"]

[tool.ruff.lint]
select = [
    "E", "F", "W", # flake8
    "B",  "B904",  # flake8-bugbear
    "I",           # isort
    "ARG",         # flake8-unused-arguments
    "C4",          # flake8-comprehensions
    "EM",          # flake8-errmsg
    "ICN",         # flake8-import-conventions
    "ISC",         # flake8-implicit-str-concat
    "PGH",         # pygrep-hooks
    "PIE",         # flake8-pie
    "PL",          # pylint
    "PT",          # flake8-pytest-style
    "PTH",         # flake8-use-pathlib
    "RET",         # flake8-return
    "RUF",         # Ruff-specific
    "SIM",         # flake8-simplify
    "TID251",      # flake8-tidy-imports.banned-api
    "T20",         # flake8-print
    "UP",          # pyupgrade
    "YTT",         # flake8-2020
]
extend-ignore = [
    "PLR",     # Design rules for pylint
    "PLW1641", # Objects not implementing __hash__ (design choice)
    "PLE1205", # Format check doesn't work with our custom logger
    "E501",    # Line too long
    "RUF009",  # Too easy to get a false positive
]
unfixable = ["T20", "F841"]


[tool.mypy]
files = ["checkmytex"]
mypy_path = ["$MYPY_CONFIG_FILE_DIR/checkmytex"]
python_version = "3.10"
warn_unused_configs = true
show_error_codes = true
strict = false
disallow_untyped_defs = false
check_untyped_defs = false
disallow_any_generics = false
warn_return_any = false

# External packages without type stubs
[[tool.mypy.overrides]]
module = [
    "flachtex.*",
    "yalafi.*",
    "spellchecker",
    "proselint.*",
    "rich.*",
]
ignore_missing_imports = true


[tool.pylint]
py-version = "3.10"
jobs = "0"
reports.output-format = "colorized"
similarities.ignore-imports = "yes"
good-names = ["f"]
messages_control.disable = [
    "design",
    "fixme",
    "import-outside-toplevel",
    "invalid-name",
    "line-too-long",
    "missing-class-docstring",
    "missing-function-docstring",
    "missing-module-docstring",
    "wrong-import-position",
    "unnecessary-ellipsis",  # Conflicts with Protocols
    "broad-except",
    "unused-argument",  # Handled by Ruff
    "redefined-builtin",  # ExceptionGroup is a builtin
]
